--- a/src/app/pages/admin/user-manage/user-manage.component.html
+++ b/src/app/pages/admin/user-manage/user-manage.component.html
@@ -138,13 +138,13 @@
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
-          <nz-form-label [nzSpan]="7" nzRequired nzFor="add_user_classid">班级ID</nz-form-label>
+          <nz-form-label [nzSpan]="7" nzRequired nzFor="add_user_classId">班级ID</nz-form-label>
           <nz-form-control [nzSpan]="12">
             <input
-              id="add_user_classid"
+              id="add_user_classId"
               nz-input
-              [(ngModel)]="addUserForm.classid"
-              name="classid"
+              [(ngModel)]="addUserForm.classId"
+              name="classId"
               placeholder="请输入班级ID"
             />
           </nz-form-control>
